# biometry

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: CI.yml
apps/: CMakeLists.txt
apps/BaseFrequencyDetector/: CMakeLists.txt
apps/BaseFrequencyDetector/src/: main.cpp
apps/FaceDetection/: CMakeLists.txt
apps/FaceDetection/src/: main.cpp
cmake/: -config.cmake.in  coverage.cmake  install.cmake  project_management.cmake  static_analysis.cmake  tests.cmake  tools.cmake  utils.cmake
libs/: CMakeLists.txt
libs/AudioFile/: CMakeLists.txt
libs/AudioFile/include/: AudioFile.h
libs/AudioFile/src/: AudioFile.cpp
libs/AudioFile/test/: AudioFile_tests.cpp
libs/Classification/: CMakeLists.txt
libs/Classification/include/: Classification.h
libs/Classification/src/: Classification.cpp
libs/Classification/test/: Classification_tests.cpp
libs/Configuration/: CMakeLists.txt
libs/Configuration/include/: Configuration.h
libs/Configuration/src/: Configuration.cpp
libs/Configuration/test/: Configuration_tests.cpp
libs/FeatureExtraction/: CMakeLists.txt
libs/FeatureExtraction/include/: FeatureExtraction.h
libs/FeatureExtraction/src/: FeatureExtraction.cpp
libs/FeatureExtraction/test/: FeatureExtraction_tests.cpp
libs/IO/: CMakeLists.txt
libs/IO/include/: IO.h
libs/IO/src/: IO.cpp
libs/IO/test/: IO_tests.cpp
libs/SoundProcessing/: CMakeLists.txt
libs/SoundProcessing/include/: SoundProcessing.h
libs/SoundProcessing/src/: SoundProcessing.cpp
libs/SoundProcessing/test/: SoundProcessing_tests.cpp
testData/yalefaces/: main.py
